Fix wrong color display in tooltip

--- a/src/Resources/public/src/scss/c4g_visualization.scss
+++ b/src/Resources/public/src/scss/c4g_visualization.scss
@@ -40,18 +40,18 @@
     justify-content: space-between;
     align-items: center;
 
-    > div {
+    &-color {
+        display: block;
+        width: 6px;
+        height: 6px;
+        padding: 5px 5px;
+    }
+
+    &-value, &-extension {
         padding: 2px 5px;
     }
-}
 
-.c4g-tooltip-element-extension > p {
-    display: inline;
-}
-
-.c4g-tooltip-element-color {
-    display: block;
-    width: 0.4em;
-    height: 0.4em;
-    padding: 2px 5px;
+    &-extension > p {
+        display: inline;
+    }
 }
